2022-10-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (find-2022yttranscriptvideo): new function.
	(ee-1stclassvideos-info): added an entry for ""2022yttranscript".

2022-10-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-youtubedl-split): use `let*'.
	(find-yttranscript-links): added a shorter format.

	* eev-pdflike.el (ee-code-pdfbackend, ee-code-pdftextbackend):
	fixed a bug in the interactive.

2022-10-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-eejump-links): new function.
	(find-importlib-links, find-pypi-links): new functions.

2022-10-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-shorterfname): new function.
	(ee-kl-sexp-kla, ee-kl-sexp-klas): use `ee-kl-shorterfname'.

2022-10-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-testblocks.el (ee-insert-test-f90-mode): new function.

2022-10-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdftools-page, find-xpdf-page)
	(find-pdftoolsr-page): added an (interactive ...).
	(ee-code-pdftextbackend, ee-code-pdfbackend): same.
	(find-pdftools-page): use `revert-without-query'.

2022-09-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-preferred-c-guess): new variable.
	(ee-kl-all-eds-for, ee-kl-best-ed-for, ee-kl-best-cs-for): new
	functions.
	(ee-preferred-c-here-without-guess): new function.
	(ee-preferred-c-here-with-guess): new function.
	(ee-preferred-c-here): new function.
	(ee-kl-c): use `ee-preferred-c-here'.

2022-09-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kla2-insert, ee-kla2-bol, ee-kla2-flash): new
	functions.
	(eekla2): rewritten.
	(ee-kl-flash-sexp): new variable.

2022-09-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kl-format, ee-kl-insert): these variables were
	renamed to `ee-kl-format1' and `ee-kl-format2' respectively.
	(ee-kl-format): this function was renamed to `ee-kl-format1'.
	(ee-kl-format2): new function.
	(ee-kl-format2-for-mode): new function.